--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Mini-dashboard | Meilisearch</title>
+  <!-- Fathom analytics -->
   <script src="https://cdn.usefathom.com/script.js" data-site="QNBPJXIV" defer></script>
 </head>
 
