--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Dashboard to test Meilisearch's search engine" />
+  <meta name="description" content="Search through 40 million of songs with Meilisearch" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Mini-dashboard | Meilisearch</title>
+  <title>Music demo - Meilisearch</title>
   <!-- Fathom analytics -->
   <script src="https://cdn.usefathom.com/script.js" data-site="QNBPJXIV" defer></script>
 </head>
